# mathom

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: category.rs  entry.rs  export.rs  interner.rs  lib.rs  search.rs  stats.rs  tree.rs  treemap.rs
crates/scanner/: Cargo.toml
crates/scanner-ntfs/: Cargo.toml
crates/scanner-ntfs/benches/: mft.rs
crates/scanner-ntfs/examples/: dump_mft.rs  mft_scan.rs  read_probe.rs
crates/scanner-ntfs/src/: assemble.rs  boot.rs  fixture.rs  lib.rs  pipeline.rs  record.rs  runs.rs  scanner.rs  volume.rs
crates/scanner-ntfs/tests/: oracle.rs  probe.rs
crates/scanner/benches/: scan.rs
crates/scanner/examples/: walk.rs
crates/scanner/src/: lib.rs  walker.rs
crates/scanner/tests/: generic_walker.rs
docs/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: drives.rs  elevation.rs  main.rs  protected.rs  scan.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: ConfirmDelete.tsx  ContextMenu.tsx  ErrorBoundary.tsx  ExportMenu.tsx  ScanMenu.tsx  SearchBox.tsx  SettingsMenu.tsx  StatusBar.tsx  Toolbar.tsx  TreeView.tsx  Treemap.tsx  TypePanel.tsx  WindowControls.tsx  icons.tsx
ui/src/hooks/: useScan.ts  useTheme.ts
ui/src/lib/: api.ts  clipboard.ts  errors.ts  format.ts  palette.ts  theme.ts
