[package]
name = "mathom-app"
version = "0.1.0"
edition = "2024"

[dependencies]
mathom-core = { version = "0.1.0", path = "../crates/core" }
mathom-scanner = { version = "0.1.0", path = "../crates/scanner" }
mathom-scanner-ntfs = { version = "0.1.0", path = "../crates/scanner-ntfs" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2"
trash = "5"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
