[package]
name = "mathom-app"
version = "0.1.0"
edition = "2024"

[features]
# The MFT fast path ships on by default; the app degrades to the generic
# walker at runtime when it can't be used (non-NTFS, not elevated).
default = ["mft-backend"]
mft-backend = ["mathom-scanner-ntfs/mft-backend"]

[dependencies]
mathom-core = { version = "0.1.0", path = "../crates/core" }
mathom-scanner = { version = "0.1.0", path = "../crates/scanner" }
mathom-scanner-ntfs = { version = "0.1.0", path = "../crates/scanner-ntfs" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2"
trash = "5"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
