[package]
name = "mathom-scanner-ntfs"
version = "0.1.0"
edition = "2024"

[features]
# Off by default until milestone 5 wires the backend in — keeps mft/ntfs/
# windows out of every build. Windows-only; elsewhere the crate is an empty
# stub either way.
default = []
mft-backend = ["dep:mft", "dep:ntfs", "dep:windows"]

[dependencies]
mathom-core = { version = "0.1.0", path = "../core" }
mathom-scanner = { version = "0.1.0", path = "../scanner" }

[target."cfg(windows)".dependencies]
mft = { version = "0.7.0", optional = true }
ntfs = { version = "0.4.0", optional = true }
windows = { version = "0.62.2", optional = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
] }
