[package]
name = "mathom-scanner-ntfs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
# Byte parsing + tree assembly are portable pure code, always compiled (and
# unit-testable on any OS). `mft-backend` adds the Windows volume I/O that
# feeds them; off by default so the app opts in explicitly. `oracle-tests`
# pulls the `mft` crate purely as a test-time parity oracle — never a runtime
# dependency of the shipped scanner (see plan.md).
default = []
mft-backend = ["dep:windows"]
oracle-tests = ["dep:mft"]

[dependencies]
crossbeam-channel = "0.5.15"
mathom-core = { version = "0.1.0", path = "../core" }
mathom-scanner = { version = "0.1.0", path = "../scanner" }
mft = { version = "0.7.0", optional = true }
rayon = "1.12.0"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", optional = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
] }

[dev-dependencies]
criterion = "0.8.2"

[[test]]
name = "oracle"
required-features = ["oracle-tests"]

[[bench]]
name = "mft"
harness = false

[[example]]
name = "mft_scan"
required-features = ["mft-backend"]

[[example]]
name = "dump_mft"
required-features = ["mft-backend"]
